responsive styles for video page. input field styles. fixes overflow on playback rate selector.

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,8 @@
     transform: rotate(360deg);
   }
 }
+
+#slider-thumb {
+  background-color: none;
+  box-shadow: none;
+}
